concord_macros/tests/dsl/fail/fail_base_backslash.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client BaseBackslashApi {
        base "https://example.com\\evil"
    }
}

fn main() {}
